# Make

AUTOMAKE/: Makefile.am  README  configure.ac  func1.c  func2.h  rodclean
AUTOMAKE/NO_AUTO_TOOLS/: Makefile  README  func1.h  func2.c  main.c  rodclean
OREILLY/: Makefile  README  count_words.c  sample.txt
OREILLY/BAK/: clean  lexer.l.ALTERNATE
OREILLY/include/: counter.h  lexer.h
OREILLY/src/: count_words.c  counter.c  lexer.l
